--- a/WebServerDemo/WebServerDemo.vcxproj
+++ b/WebServerDemo/WebServerDemo.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="TCP\TCPConnection.cpp" />
     <ClCompile Include="WebServerDemo.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
